# thiago_carrijo_rufino_rabelo_embarcatech_HBr_2025

./: README.md
projetos/FreeRTOS_led_button_buzzer/: CMakeLists.txt  README.md
projetos/FreeRTOS_led_button_buzzer/src/: CMakeLists.txt  button.c  button.h  buzzer.c  main.c
projetos/blink_led/: CMakeLists.txt  README.md
projetos/blink_led/app/: main.c
projetos/blink_led/drivers/: led_embutido.c
projetos/blink_led/hal/: hal_led.c
projetos/blink_led/include/: hal_led.h  led_embutido.h
projetos/count_oled_btn_int/: CMakeLists.txt  README.md  main.c
projetos/fly_pong/: CMakeLists.txt  ws2818b.pio
projetos/fly_pong/include/: button.h  buzzer.h  led_matrix.h  led_rgb.h  wifi_conn.h
projetos/fly_pong/src/: led_matrix.c  led_rgb.c  main.c  wifi_conn.c
projetos/galton_board/: CMakeLists.txt  README.md  ball.c  ball.h  main.c  map.c  map.h  oled.c  oled.h  vec2.c  vec2.h
projetos/galton_board/inc/: ssd1306_font.h  ssd1306_i2c.h
projetos/gyro_accel_test/: CMakeLists.txt
projetos/gyro_accel_test/include/: MPU6050.h  gpio.h
projetos/gyro_accel_test/src/: MPU6050.c  gpio.c  gyro_accel_MPU.c
projetos/joystick_test/: CMakeLists.txt  README.md  main.c
projetos/mqtt/: iot_security_lab.c
projetos/mqtt/include/: lwipopts.h  mqtt_comm.h  xor_cipher.h
projetos/mqtt/src/: CMakeLists.txt  README.md  mqtt_comm.c
projetos/random_num_test/: CMakeLists.txt  README.md  main.c  oled.c
projetos/random_num_test/inc/: ssd1306.h
projetos/sintetizador_audio/: CMakeLists.txt  Readme.md  main.c
projetos/sintetizador_audio/inc/: gpio.h  oled.h
projetos/sintetizador_audio/src/: gpio.c  oled.c
projetos/temp_oled/: CMakeLists.txt  README.md  main.c
projetos/temp_oled/inc/: oled.h  temperature.h
projetos/temp_oled/src/: main.c  oled.c  temperature.c
projetos/temp_oled/test/: CMakeLists.txt  test_adc.c
